WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279607
[tvOS] WKWebView setup crashes underneath -[WKTextInteractionWrapper initWithView:]
https://bugs.webkit.org/show_bug.cgi?id=279607
Summary
[tvOS] WKWebView setup crashes underneath -[WKTextInteractionWrapper initWith...
Wenson Hsieh
Reported
2024-09-12 12:52:37 PDT
rdar://135371183
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2024-09-12 13:00:28 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33562
EWS
Comment 2
2024-09-12 14:24:55 PDT
Committed
283577@main
(ca1caaffbcaa): <
https://commits.webkit.org/283577@main
> Reviewed commits have been landed. Closing PR #33562 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug