[tvOS] WKWebView setup crashes underneath -[WKTextInteractionWrapper initWithView:] https://bugs.webkit.org/show_bug.cgi?id=279607 rdar://135371183

Reviewed by Abrar Rahman Protyasha and Aditya Keerthi.

Adjust a build-time flag to avoid this codepath in some configurations.

* Source/WebKit/UIProcess/ios/WKTextInteractionWrapper.mm:
(-[WKTextInteractionWrapper initWithView:]):

Canonical link: https://commits.webkit.org/283577@main